add links in navbar

--- a/index.html
+++ b/index.html
@@ -34,22 +34,23 @@
             <div class="col-md-offset-2 col-md-6 col-xs-offset-1 col-sm-offset-1 col-sm-12">
                 <h1>To Have <small>and</small> Hold Fast</h1>
                 <h2 style="margin-left: 60px;">March 26, 2016</h2>
+                <h1><big>Tony and Lee</big></h1>
             </div>
         </div>
         <!-- /.row -->
     </div>
     <br>
-    <div class="jumbotron">
-        <div class="row">
-            <div class="col-md-offset-7 col-md-5 col-xs-offset-1 col-sm-offset-1 col-sm-12">
-                <h1>Tony and Lee</h1>
-                <p class="text-left">
-                  <a href="https://docs.google.com/forms/d/1lLWp3C0cbTMv353dS2EnDN9xkVZO-CHBkQy38-BeAXQ/viewform?edit_requested=true">Click Here to RSVP</a>
-                </p>
-            </div>
+
+    <nav class="navbar navbar-default navbar-fixed-bottom" style="background:rgba(1,1,1,.2);border:none;">
+      <div class="container">
+        <div class="col-md-6 col-sm-12">
+          <h1 class="text-center"><a href="https://docs.google.com/forms/d/1lLWp3C0cbTMv353dS2EnDN9xkVZO-CHBkQy38-BeAXQ/viewform?edit_requested=true">RSVP</a></h1>
         </div>
-        <!-- /.row -->
-    </div>
+        <div class="col-md-6 col-sm-12">
+          <h1 class="text-center"><a href="https://docs.google.com/forms/d/1lLWp3C0cbTMv353dS2EnDN9xkVZO-CHBkQy38-BeAXQ/viewform?edit_requested=true">REGISTRY</a></h1>
+        </div>
+      </div>
+    </nav>
 
     <!-- /.container -->
 
