Fix registry link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h1 class="text-center"><a href="https://docs.google.com/forms/d/1lLWp3C0cbTMv353dS2EnDN9xkVZO-CHBkQy38-BeAXQ/viewform?edit_requested=true">RSVP</a></h1>
         </div>
         <div class="col-md-6 col-sm-12">
-          <h1 class="text-center"><a href="https://docs.google.com/forms/d/1lLWp3C0cbTMv353dS2EnDN9xkVZO-CHBkQy38-BeAXQ/viewform?edit_requested=true">REGISTRY</a></h1>
+          <h1 class="text-center"><a href="https://www.zola.com/registry/tohaveandholdfast">REGISTRY</a></h1>
         </div>
       </div>
     </nav>
