--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <br>
 
-    <nav class="navbar navbar-default navbar-fixed-bottom" style="background:rgba(1,1,1,.2);border:none;">
+    <nav class="navbar navbar-default navbar-bottom" style="background:rgba(1,1,1,.2);border:none;">
       <div class="container">
         <div class="col-md-6 col-sm-12">
           <h1 class="text-center"><a href="https://docs.google.com/forms/d/1lLWp3C0cbTMv353dS2EnDN9xkVZO-CHBkQy38-BeAXQ/viewform?edit_requested=true">RSVP</a></h1>
