Add google maps with stuff to do

--- a/index.html
+++ b/index.html
@@ -1,65 +1,57 @@
 <!DOCTYPE html>
-<html class="full" lang="en">
-<!-- Make sure the <html> tag is set to the .full CSS class. Change the background image in the full.css file. -->
+<html lang="en" class="full">
+  <head>
+    <meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="">
+<meta name="author" content="">
 
-<head>
+    <title>Rebel and Doc are getting married!</title>
+<link rel="stylesheet" href="css/bootstrap.min.css"/>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <style>body {
+   background:url('background.png') top left;
+   background-size: 100vw;
+}
+.jumbotron { background-color: rgba(255,255,255,.6); }
+    </style>
+  </head>
+}
 
-    <title>The Big Picture - Start Bootstrap Template</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/the-big-picture.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body class="row">
-    <!-- Page Content -->
-    <div class="jumbotron">
-        <div class="row">
-            <div class="col-md-offset-2 col-md-6 col-xs-offset-1 col-sm-offset-1 col-sm-12">
-                <h1>To Have <small>and</small> Hold Fast</h1>
-                <h2 style="margin-left: 60px;">March 26, 2016</h2>
-                <h1><big>Tony and Lee</big></h1>
-            </div>
-        </div>
-        <!-- /.row -->
+  <body>
+<div class="container">
+  <div class="jumbotron">
+    <hr/>
+    <h1>
+      <p style="font-size: 72px;" class="display-1 text-center text-uppercase">To Have & Hold Fast</p>
+    </h1>
+    <hr/>
+    <h2>
+      <p class="display-4 text-center lead">March 26, 2016 <br>
+5pm - 9pm <br>
+      </p>
+    </h2>
+    <h3>
+      <p class="text-center lead"><i>Dillwood Farms <br>
+4000 Brushy Fork Road SW <br>
+Loganville, Georgia 30052 <br></i>
+      </p>
+    </h3>
+  </div>
+  <div class="jumbotron">
+    <blockquote class="blockquote">
+      <p class="display-3 m-b-0">We are excited to have you at our wedding celebration.  For those visiting the city we provided a mapbelow of our favorite places; it is a good food city.  On Friday night we will meet up at
+Augustine's in East Atlanta Village.  We are looking forward to seeing everyone.  
+      </p>
+      <footer class="blockquote-footer">Lee & Tony</footer>
+    </blockquote><br/>
+  </div>
+  <div class="jumbotron">
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe src="https://www.google.com/maps/d/u/0/embed?mid=zIdFaar2Onaw.koOb3lP6jK-A" width="640" height="480" class="embed-responsive-item"></iframe>
     </div>
-    <br>
-
-    <nav class="navbar navbar-default navbar-bottom" style="background:rgba(1,1,1,.2);border:none;">
-      <div class="container">
-        <div class="col-md-6 col-sm-12">
-          <h1 class="text-center"><a href="https://docs.google.com/forms/d/1lLWp3C0cbTMv353dS2EnDN9xkVZO-CHBkQy38-BeAXQ/viewform?edit_requested=true">RSVP</a></h1>
-        </div>
-        <div class="col-md-6 col-sm-12">
-          <h1 class="text-center"><a href="https://www.zola.com/registry/tohaveandholdfast">REGISTRY</a></h1>
-        </div>
-      </div>
-    </nav>
-
-    <!-- /.container -->
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-</body>
-
+  </div>
+</div>
+<br><br><br>
+  </body>
 </html>
